# docker-ml-microservices

./: .gitignore  README.md
train_eval_test_on_docker_microservices/: Dockerfile  compose.yaml  pyproject.toml
train_eval_test_on_docker_microservices/src/train_eval_test_on_docker_microservices/: main.py
